button added in new branch

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <h1>My First Website</h1>
 <p>Feeling very happy and motivated now!</p>
 <p>I'm adding another paragraph to pull it from github to local!</p>
+
+<input type="text">
+<button>Click on me!</button>
